[package]
name = "ua4f"
authors = ["James Clef"]
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
socks5-server = "0.10.1"
tokio = { version = "1.40.1", features = ["full"] }
num_cpus = "1.16.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "local-time"] }
tracing-appender = "0.2.3"
bytes = "1.7.2"
once_cell = "1.19.0"


[profile.release]
opt-level = 3
debug = 2

