[package]
name = "ua4f"
authors = ["James Clef"]
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
socks5-server = "0.10.1"
tokio = { version = "1.42.0", features = ["full"] }
num_cpus = "1.16.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "local-time"] }
tracing-appender = "0.2.3"
once_cell = "1.20.2"

time = { version = "0.3.37", features = ["macros"] }
memchr = "2.7.4"
atty = "0.2.14"





[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true


