[package]
name = "ua4f"
authors = ["James Clef"]
license = "AGPL-3.0-or-later"
version = "0.2.0"
edition = "2021"


[dependencies]
moka = { version = "0.12.10", features = ["future"] }
clap = { version = "4.5.30", features = ["derive"] }
socks5-server = "0.10.1"
tokio = { version = "1.43.0", features = ["full"] }
num_cpus = "1.16.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "local-time"] }
once_cell = "1.20.3"
time = { version = "0.3.37", features = ["macros"] }
memchr = "2.7.4"
atty = "0.2.14"
bytes = "1.10.0"





[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

